# swo-extension-playground

./: .coderabbit.yaml  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  setup.cfg  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: pr-build-merge.yml  release.yml
swo/mpt/extensions/runtime/: initializer.py  swoext.py
swo/mpt/extensions/runtime/commands/: django.py
swo/mpt/extensions/runtime/djapp/conf/: default.py
swo/mpt/extensions/runtime/events/: dispatcher.py  producers.py
swo_playground/: __init__.py  api.py  apps.py  default.py  events.py  extension.py  initializer.py  purchase.py  settings.py  steps.py
swo_playground/management/commands/: hello.py
tests/: conftest.py  test_apps.py  test_events.py  test_steps.py
tests/django/: settings.py
tests/management/commands/: test_hello.py
