[project]
name = "swo-playground-extension"
version = "0.0.0"
description = "Playground for SWO Marketplace Platform"
authors = [{ name = "SoftwareOne AG" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = {text = "Apache-2.0 license"}

dependencies = [
    "django==4.2.*",
    "mpt-extension-sdk==5.17.*",
]

[project.entry-points."swo.mpt.ext"]
app_config = "swo_playground.apps:ExtensionConfig"

[dependency-groups]
dev = [
  "flake8==7.3.*", # force flake8 version to have same formatting everywhere, also update in pre-commit config
  "flake8-aaa==0.17.*", # also update pre-commit config
  "flake8-pyproject==1.2.*", # also update pre-commit config
  "freezegun==1.5.*",
  "ipdb==0.13.*",
  "ipython==9.*",
  "mypy==1.19.*",
  "pre-commit==4.5.*",
  "pytest==9.0.*",
  "pytest-cov==7.0.*",
  "pytest-deadfixtures==3.1.*",
  "pytest-django==4.11.*",
  "pytest-mock==3.15.*",
  "pytest-randomly==4.0.*",
  "pytest-xdist==3.8.*",
  "ruff==0.14.*", # force ruff version to have same formatting everywhere, also update in pre-commit config
  "wemake-python-styleguide==1.5.*", # also update pre-commit config
]

[tool.hatch.build.targets.sdist]
include = ["swo_playground"]

[tool.hatch.build.targets.wheel]
include = ["swo_playground"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."
addopts = "--cov=swo_playground --cov-report=term-missing --cov-report=xml --import-mode=importlib"
DJANGO_SETTINGS_MODULE = "mpt_extension_sdk.runtime.djapp.conf.default"
log_cli = false
filterwarnings = []

[tool.coverage.run]
branch = true
relative_files = true
omit = [
  "__init__.py",
]

[tool.flake8]
allowed-domain-names = ["result"]
aaa_act_block_style = "large"
doctests = true
extend-ignore = ["WPS226"]
extend-exclude = [
  ".coverage",
  ".github",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "uv.lock",
  ".venv"
]
format = "wemake"
max-imports = 17
max-line-length = 100
select = ["AAA", "E999", "WPS"]
show-source = true
statistics = false
per-file-ignores = [
  "tests/django/settings.py: WPS407",
  "settings.py: WPS407",
]

[tool.ruff]
preview = true
target-version = "py312"
output-format = "full"
line-length = 100

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # maccabe
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FLY",  # pyflint
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simpify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "A005",   # allow to shadow stdlib and builtin module names
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "COM812", # trailing comma, conflicts with `ruff format`
    # Different doc rules that we don't really care about:
    "D100",
    "D104",
    "D105", # docstring for magic methods
    "D106",
    "D107",
    "D203",
    "D212",
    "D401",
    "D404",
    "D405",
    "ISC001",  # implicit string concat conflicts with `ruff format`
    "ISC003",  # prefer explicit string concat over implicit concat
    "PLR09",   # we have our own complexity rules
    "PLR2004", # do not report magic numbers
    "PLR6301", # do not require classmethod / staticmethod when self not used
    "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    "TRY003",  # long exception messages from `tryceratops`
]
external = [ "AAA", "WPS" ]

# Plugin configs:
[tool.ruff.lint.flake8-import-conventions]
banned-from = ["ast", "datetime"]
aliases = { datetime = "dt" }

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "D103", # missing docstring in public function
  "S101", # asserts
  "S105", # hardcoded passwords
  "S404", # subprocess calls are for tests
  "S603", # do not require `shell=True`
  "S607", # partial executable paths
]

[tool.ruff.lint.isort]
known-third-party = ["swo"]

[tool.mypy]
warn_no_return = false

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true
